<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".main.OptionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/ib_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#00C6CABA"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/clapper" />

        <ImageButton
            android:id="@+id/ib_genres"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#00C6CABA"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mask" />

        <ImageButton
            android:id="@+id/ib_users"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#00D4E4A4"
            android:outlineSpotShadowColor="#509C3D"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/users_icon" />

        <ImageButton
            android:id="@+id/ib_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#00D4E4A4"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_icon" />
    </LinearLayout>

</FrameLayout>