...

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_height="50dp"
                android:gravity="end"
                android:orientation="horizontal"/>


            <TextView
                android:id="@+id/ib_tmdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="#7EC7C0"
                android:textSize="20sp"
                android:textStyle="bold"
...
