...

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
...

                    <FrameLayout
                        android:layout_width="120dp"
                        android:layout_height="213dp">

                        <ImageView
                            android:id="@+id/ivLat1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="2dp"
                            android:scaleType="centerCrop" />

                        <com.airbnb.lottie.LottieAnimationView
...
