...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <Button
        android:id="@+id/btn_google_sign_in"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/button"
        android:includeFontPadding="false"
...
